2001-01-16  Benjamin Kosnik  <bkoz@redhat.com>

	* docs/html/17_intro/C++STYLE (classname): Add more existing
	and stylish patterns.

	libstdc++/944
	* include/bits/istream.tcc (istream::sentry::sentry()): Set
	failbit if the state of the stream is not good.
	* testsuite/27_io/istream_sentry.cc (test02): Add test.
	* testsuite/27_io/istream_manip.cc (test01): Modify.

	libstdc++/1019
	reported by Paolo Carlini <pcarlini@unitus.it>
	* include/bits/istream.tcc (operator>>(istream&, string&)): Fix. 
	* testsuite/21_strings/inserters_extractors.cc (test08): Add test.

	libstdc++/1057
	* include/bits/std_streambuf.h (setp): Set _M_buf_size correctly.
	* include/bits/streambuf.tcc (xsputn): Remove outside if clause.
	(xsgetn): Same. Simplify.
	* testsuite/27_io/streambuf.cc (test04): Add testcases.

	reported by Larry Evans <jcampbell3@prodigy.net> 
	* include/bits/streambuf.tcc (streambuf::xsputn): Just check for
	equality with eof on returned value from overflow.

2001-01-14  Andreas Jaeger  <aj@suse.de>

	* libio/libio.h: Add test for glibc 2.0.

2001-01-12  Benjamin Kosnik  <bkoz@redhat.com>

	* config/os/djgpp/bits/*: Fix dates.

	* include/bits/basic_string.h (_S_find(const _CharT* __beg, const
	_CharT* __end, _CharT __c): Remove.
	* include/bits/basic_string.tcc: Substitute traits::find for _S_find.
	* include/bits/char_traits.h: Tweak.

2001-01-12  Laurynas Biveinis  <lauras@softhome.net>

	* acinclude.m4 (GLIBCPP_CHECK_CTYPE_SUPPORT): check for DJGPP <ctype.h>
	(LIB_AC_PROG_CXX): replace [/\\] with [\\/] to work around older
	bash bug.
	* aclocal.m4: regenerated.
	* configure.target: set os_include_dir to config/os/djgpp under DJGPP.
	* configure: regenerated.
	* config/os/djgpp, config/os/djgpp/bits: new directories.
	* config/os/djgpp/bits/ctype_base.h,
	config/os/djgpp/bits/ctype_inline.h,
	config/os/djgpp/bits/ctype_noninline.h,
	config/os/djgpp/bits/os_defines.h: new files.

2001-01-11   Joseph S. Myers  <jsm28@cam.ac.uk>
