@@ -1,3 +1,8 @@
+2001-01-16  Mark Mitchell  <mark@codesourcery.com>
+
+	* libsupc++/exception_support.cc (__cp_pop_exception): Change
+	prototype.
+
 2001-01-16  Benjamin Kosnik  <bkoz@redhat.com>
 
 	* docs/html/17_intro/C++STYLE (classname): Add more existing
